--- a/templates/level3.html
+++ b/templates/level3.html
@@ -2,79 +2,31 @@
  * @Author: liziwei01
  * @Date: 2022-10-04 04:11:31
  * @LastEditors: liziwei01
- * @LastEditTime: 2022-10-04 04:18:47
+ * @LastEditTime: 2022-10-04 07:29:10
  * @Description: file content
 -->
 <!doctype html>
 <html>
-  <head>
-    <!-- Internal game scripts/styles, mostly boring stuff -->
-    <script src="/static/game-frame.js"></script>
-    <link rel="stylesheet" href="/static/game-frame-styles.css" />
- 
-    <!-- Load jQuery -->
-    <script
-      src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js">
-    </script>
- 
-    <script>
-		function htmlEncodeByRegExp  (str){ 
-         var s = "";
-         if(str.length == 0) return "";
-         s = str.replace(/&/g,"&amp;");
-         s = s.replace(/</g,"&lt;");
-         s = s.replace(/>/g,"&gt;");
-         s = s.replace(/ /g,"&nbsp;");
-         s = s.replace(/\'/g,"&#39;");
-         s = s.replace(/\"/g,"&quot;");
-         return s;  
- }
-      function chooseTab(num) {
-		num = htmlEncodeByRegExp(num);
-        // Dynamically load the appropriate image.
-        var html = "Image " + parseInt(num) + "<br>";
-        html += "<img src='/static/level3/cloud" + num + ".jpg' />";
-        $('#tabContent').html(html);
- 
-        window.location.hash = num;
- 
-        // Select the current tab
-        var tabs = document.querySelectorAll('.tab');
-        for (var i = 0; i < tabs.length; i++) {
-          if (tabs[i].id == "tab" + parseInt(num)) {
-            tabs[i].className = "tab active";
-            } else {
-            tabs[i].className = "tab";
-          }
-        }
- 
-        // Tell parent we've changed the tab
-        top.postMessage(self.location.toString(), "*");
-      }
- 
-      window.onload = function() { 
-        chooseTab(unescape(self.location.hash.substr(1)) || "1");
-      }
- 
-      // Extra code so that we can communicate with the parent page
-      window.addEventListener("message", function(event){
-        if (event.source == parent) {
-          chooseTab(unescape(self.location.hash.substr(1)));
-        }
-      }, false);
-    </script>
- 
-  </head>
-  <body id="level3">
-    <div id="header">
-      <img id="logo" src="/static/logos/level3.png">
-      <span>Take a tour of our cloud data center.</a>
-    </div>
- 
-    <div class="tab" id="tab1" onclick="chooseTab('1')">Image 1</div>
-    <div class="tab" id="tab2" onclick="chooseTab('2')">Image 2</div>
-    <div class="tab" id="tab3" onclick="chooseTab('3')">Image 3</div>
- 
-    <div id="tabContent"> </div>
-  </body>
+	<head>
+		<!-- Internal game scripts/styles, mostly boring stuff -->
+		<script src="/static/game-frame.js"></script>
+		<link rel="stylesheet" href="/static/game-frame-styles.css" />
+	
+		<!-- Load jQuery -->
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+		<script src="/static/level3.js"></script>
+	
+	</head>
+	<body id="level3">
+		<div id="header">
+		<img id="logo" src="/static/logos/level3.png">
+		<span>Take a tour of our cloud data center.</a>
+		</div>
+	
+		<div class="tab" id="tab1" onclick="chooseTab('1')">Image 1</div>
+		<div class="tab" id="tab2" onclick="chooseTab('2')">Image 2</div>
+		<div class="tab" id="tab3" onclick="chooseTab('3')">Image 3</div>
+	
+		<div id="tabContent"> </div>
+	</body>
 </html>
